openobserve/openobserve-small.yml
# Based on: https://github.com/openobserve/openobserve/blob/main/deploy/k8s/statefulset.yaml

apiVersion: v1
kind: Service
metadata:
  name: openobserve
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: openobserve
  ports:
  - name: http
    port: 5080
    targetPort: 5080

---

apiVersion: v1
kind: Service
metadata:
  name: openobserve-headless
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: openobserve
  ports:
  - name: http
    port: 5080
    targetPort: 5080

---

# create statefulset
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openobserve
  labels:
    app.kubernetes.io/name: openobserve
spec:
  serviceName: openobserve-headless
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: openobserve
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openobserve
    spec:
      containers:
      - name: openobserve
        image: public.ecr.aws/zinclabs/openobserve:v0.9.2-rc1
        resources:
          limits:
            cpu: 2
            memory: 4Gi
          requests:
            cpu: 2
            memory: 2Gi
        ports:
        - containerPort: 5080
          name: http
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 3
          periodSeconds: 3
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: ocs-external-storagecluster-ceph-rbd
      resources:
        requests:
          storage: 20Gi
